--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 
-<div class="portfolio-card">
+<div style="margin-top: 20px" class="portfolio-card">
   <p><strong>Portfolio:</strong></p>
   <p>🔗 <strong><a href="https://www.linkedin.com/in/eugene-mcgrath-550b4897" target="_blank">LinkedIn</a></strong></p>
   <p>💻 <strong><a href="https://github.com/cplklegg" target="_blank">GitHub</a></strong></p>
