--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: Arial, sans-serif;
     }
     .portfolio-card p {
-      margin: 10px 0;
+      margin: 50px 0;
     }
     .portfolio-card a {
       text-decoration: none;
@@ -22,7 +22,7 @@
   </style>
 </head>
 
-<div style="margin-top: 20px" class="portfolio-card">
+<div class="portfolio-card">
   <p><strong>Portfolio:</strong></p>
   <p>🔗 <strong><a href="https://www.linkedin.com/in/eugene-mcgrath-550b4897" target="_blank">LinkedIn</a></strong></p>
   <p>💻 <strong><a href="https://github.com/cplklegg" target="_blank">GitHub</a></strong></p>
